# bybit.rust.api

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  ENDPOINTS.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  postman-openapi.json
.github/workflows/: ci.yml
examples/: account_example.rs  all_features_example.rs  comprehensive_example.rs  market_example.rs  simple_example.rs  trading_example.rs  websocket_example.rs
scripts/: pre-commit.sh
src/: broker.rs  consts.rs  handler.rs  lib.rs  main.rs  utils.rs
src/handlers/: api_error.rs
src/rest/: api_key_pair.rs  client.rs  mod.rs
src/rest/account/: account_client.rs  account_type.rs  mod.rs
src/rest/account/dto/: account_info.rs  account_wallet.rs  collateral.rs  contract_transaction_log.rs  fee_rate.rs  mmp.rs  mod.rs  transaction_log.rs
src/rest/announcements/: announcements_client.rs  mod.rs
src/rest/asset/: asset_client.rs  mod.rs
src/rest/asset/dto/: mod.rs
src/rest/broker/: broker_client.rs  mod.rs
src/rest/broker/dto/: mod.rs
src/rest/crypto_loan/: crypto_loan_client.rs  mod.rs
src/rest/enums/: account_type.rs  adl_rank_indicator.rs  announcement_tag.rs  announcement_type.rs  cancel_type.rs  category.rs  contract_translog_type.rs  contract_type.rs  copy_trading.rs  create_type.rs  data_recording_period.rs  deposit_status.rs  exec_type.rs  interval.rs  interval_time.rs  locale.rs  lt_status.rs  margin_trading.rs  mod.rs  option_period.rs  order_status.rs  order_type.rs  position_idx.rs  position_status.rs  reject_reason.rs  side.rs  smp_type.rs  status.rs  stop_order_type.rs  symbol.rs  symbol_type.rs  tick_direction.rs  time_in_force.rs  transfer_status.rs  trigger_by.rs  unified_margin_status.rs  uta_translog_type.rs  vip_level.rs  withdraw_status.rs
src/rest/errors/: codes.rs  errors.json  mod.rs  p.rs  types.rs
src/rest/institutional_loan/: institutional_loan_client.rs  mod.rs
src/rest/institutional_loan/dto/: mod.rs
src/rest/market/: market_client.rs  mod.rs
src/rest/market/dto/: delivery_price.rs  funding_rate_history.rs  historical_volatility.rs  index_price_kline.rs  insurance.rs  kline.rs  long_short_ratio.rs  mark_price_kline.rs  mod.rs  open_interest.rs  order_book.rs  premium_index_price_kline.rs  recent_trade.rs  risk_limit.rs  server_time.rs  tickers.rs
src/rest/market/dto/instrument_info/: instrument_info_params.rs  instruments_info_inverse.rs  instruments_info_linear.rs  instruments_info_option.rs  instruments_info_spot.rs  mod.rs
src/rest/order/: mod.rs  order_client.rs
src/rest/order/dto/: amend_order.rs  cancel_order.rs  mod.rs  order_history.rs  place_order.rs
src/rest/position/: mod.rs  position_client.rs
src/rest/position/dto/: mod.rs
src/rest/pre_upgrade/: mod.rs  pre_upgrade_client.rs
src/rest/pre_upgrade/dto/: mod.rs
src/rest/spot_leverage_token/: mod.rs  spot_leverage_token_client.rs
src/rest/spot_leverage_token/dto/: mod.rs
src/rest/spot_margin_trade/: mod.rs  spot_margin_trade_client.rs
src/rest/spot_margin_trade/dto/: mod.rs
src/rest/user/: mod.rs  user_client.rs
src/rest/user/dto/: mod.rs
src/utils/: mod.rs  rate_limiter.rs  signing.rs
src/ws/: auth.rs  client.rs  messages.rs  mod.rs  trade.rs
src/ws/private/: dcp.rs  execution.rs  greeks.rs  mod.rs  order.rs  position.rs  wallet.rs
src/ws/public/: kline.rs  liquidation.rs  mod.rs  orderbook.rs  ticker.rs  trade.rs
tests/: integration_test.rs  wiremock_tests.rs
