[package]
name = "bybit_rust_api"
version = "0.2.0"
edition = "2021"
authors = ["Bybit Rust SDK Contributors"]
description = "Rust SDK for Bybit API V5"
license = "MIT"
repository = "https://github.com/bybit/bybit.rust.api"

[lib]
name = "bybit_rust_api"
path = "src/lib.rs"

[[bin]]
name = "bybit-cli"
path = "src/main.rs"

[[example]]
name = "market"
path = "examples/market_example.rs"

[[example]]
name = "trading"
path = "examples/trading_example.rs"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.99"
log = "0.4.27"
hmac = "0.12.1"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
hex = "0.4.3"
ring = "0.17.14"
tokio-tungstenite = { version = "0.27.0", features = [
    "rustls-tls-native-roots",
] }
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.33"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.16"
url = "2.5.6"
futures-util = "0.3.31"

[build-dependencies]
serde_json = "1.0.143"
askama = "0.14.0"                                      # Optional, for templating Rust code
serde = { version = "1.0.219", features = ["derive"] }
